--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ h1 {
   margin-bottom: 5em;
   overflow: hidden;
 }
-.slides-container {
+.slides__container {
   width: 100%;
   display: flex;
   gap: 1em;
@@ -92,6 +92,7 @@ h1 {
 }
 .slide input[type="range"]::-webkit-slider-thumb:hover {
   background-color: gray;
+  cursor: grab;
 }
 .red-slide input[type="range"]::-webkit-slider-thumb:hover {
   background-color: red;
@@ -104,6 +105,7 @@ h1 {
 }
 .slide input[type="range"]::-webkit-slider-thumb:active {
   background-color: #80808099;
+  cursor: grabbing;
 }
 .red-slide input[type="range"]::-webkit-slider-thumb:active {
   background-color: #ff000099;
@@ -134,6 +136,19 @@ h1 {
 
 
 
+.color-display__container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+h1.transparent {
+  color: #80808080;
+  font-size: min(8vw, 4em);
+  white-space: nowrap;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
 #colorDisplay {
   width: 100%;
   height: 100%;
