--- a/index.css
+++ b/index.css
@@ -186,7 +186,8 @@ h1.transparent {
     min-height: 600px;
     flex-direction: column;
   }
-  .slides-container {
+  .slides__container {
+    height: 100%;
     order: 2;
     padding-top: 1em;
     padding-bottom: 1em;
