--- a/index.css
+++ b/index.css
@@ -179,6 +179,11 @@ h1.transparent {
   border-radius: 50%;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
+  transition: all 350ms ease;
+}
+#toggleButton:active {
+  background-color: #000;
+  color: #fff;
 }
 
 
