--- a/index.css
+++ b/index.css
@@ -146,16 +146,19 @@ h1.transparent {
   font-size: min(8vw, 4em);
   white-space: nowrap;
   position: absolute;
+  top: 7%;
   left: 50%;
   transform: translateX(-50%);
 }
 #colorDisplay {
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0%;
+  left: 0%;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 #rgbDisplay {
   text-shadow: 1px 1px 3px #0005;
@@ -184,6 +187,30 @@ h1.transparent {
 #toggleButton:active {
   background-color: #000;
   color: #fff;
+}
+
+#successMessage {
+	width: min(500px, 80vw);
+	background-color: #4a990077;
+	opacity: 0;
+	color: #fff;
+	font-size: min(1.5em, 6vw);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-weight: 900;
+	position: fixed;
+	top: -10%;
+	right: 50%;
+  transform: translateX(50%);
+	padding: 1em;
+	border-radius: 1em;
+	transition: all 500ms cubic-bezier(0,1,.39,1.33);
+	z-index: 100002;
+	cursor: default;
+	pointer-events: none;
+}
+#successMessage.error--show {
+	opacity: 1;
+	top: 10%;
 }
 
 
